// import React from 'react';
// import { render } from '@testing-library/react-native';

// import Icon from './index';

// describe('Icon', () => {
//     it('When passing one of the names to return Icon and match snapshot', () => {
//         const component = render(<Icon name="back" />);
//         expect(component).toMatchSnapshot();
//     });

//     it('When passing stroke use it in icon', () => {
//         const component = render(<Icon name="bell" color={'#ccc'} />);
//         expect(component).toMatchSnapshot();
//     });

//     it('When adding style use it in icon', () => {
//         const component = render(<Icon name="bell" style={{ marginTop: 16 }} />);
//         expect(component).toMatchSnapshot();
//     });
// });
